--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Ebermudezgit.GitHub.io : ">
+    <meta name="description" content="Eli Bermudez : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Ebermudezgit.GitHub.io</title>
+    <title>Eli Bermudez - Personal Page</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ebermudezGit">View on GitHub</a>
 
-          <h1 id="project_title">Ebermudezgit.GitHub.io</h1>
+          <h1 id="project_title">Eli Bermudez - Personal Page</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -28,40 +28,44 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bienvenido a mi Pagina Personal.</h3>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Esta es mi primera pagina personal hecha en el Desafio Latam, la finalidad es aprender <code>html</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="primerasClases" class="anchor" href="#primerasClases" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Primeras Experiencias en Desafio Latam</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>En las primeras clases que he tomado desde que inicio el Desafio latam, hemos estado reforsando las bases de la programacion Web, desde el inicio comansamos a ver Comandos de Consola en Unix, Git, GitHub y HTML.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="Comando" class="anchor" href="#comando" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comando con Unix</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>En las clases de Comandos con Unix nos dieron un enfoque a los comandos mas utilizados en consola, nos mostraron lo nesesario para poder administrar los archivos, visualizar, borrar, crear y explorar carpetas, crear Archivos. Posteriormente comentare mas a detalle lo que vimso en las clases.</p>
+
+<h3>
+<a id="git" class="anchor" href="#git" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Git</h3>
+
+<p>Posteriormente se vio Git, este es un Software de control de versiones. es muy util para tener un buen control en los cambios de tus proyectos, principalmente es muy util si se trabajan proyectos en equipos, Git te permite poder tener el historial de cambios en los codigos, regresarte a alguna version anteror para poder detectar errores o regresarte a alguna version donde si funcionaba bien el proyecto. En general se recomienda ampliamente el uso de Git en los desarrollos de Proyectos. En clase vimos los comandos basico, posteriorme hablare mas de lo que vimos sobre Git</p>
+
+<h3>
+<a id="gitHub" class="anchor" href="#gitHub" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GitHub</h3>
+
+<p>Si ya tienes Git, GitHub es una pagina Web que tienes que usar, GitHub es una plataforma de desarrollo colaborativo, este aloja proyectos que con los que estas usando Git. con GitHub puedes compartir tus repositorios, los haces publicos y tambien puedes bajar proyectos de otras personas.</p>
+
+<h3>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contactame..</h3>
+
+<p>Una liga a la documentacion de GitHub<a href="https://help.github.com/pages">Docuemntacion</a></p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>Publicado con <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
