Cambios en index y  agrega forma

--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,23 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Ebermudezgit.GitHub.io : ">
+    <meta name="description" content="Ebermudezgit.GitHub.io : Se presenta mi pagina persona. Tenemos la primera fase de lo visto en el Desafio Latam.">
+    <meta name="Keywords" content="Etiquetas,No,Abusar">
+    <meta name="Robots" content="Index,follow">
+    
+    <!-->FaceBook</!-->
+    <meta property="og:url" content="http://ebermudezgit.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mi pagina Personal">
+    <meta property="og:description" content="Ebermudezgit.GitHub.io : Se presenta mi pagina persona. Tenemos la primera fase de lo visto en el Desafio Latam.">
+    <meta property="og:image" content="http://img.xmensajes.com/hola/303.jpg">
+    <meta property="og:site_name" content="Ebermudezgit.GitHub.io">
+
+    <!-->G +</!-->
+    <meta itemprop="name" content="Ebermudezgit.GitHub.io">
+    <meta itemprop="description" content="Ebermudezgit.GitHub.io : Se presenta mi pagina persona. Tenemos la primera fase de lo visto en el Desafio Latam.">
+    <meta itemprop="image" content="http://img.xmensajes.com/hola/303.jpg">
+
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
