--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Eli Bermudez : ">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <meta name="description" content="Ebermudezgit.GitHub.io : Se presenta mi pagina persona. Tenemos la primera fase de lo visto en el Desafio Latam.">
+    <meta name="Keywords" content="Etiquetas,No,Abusar">
+    <meta name="Robots" content="Index,follow">
+    
+    <!-->FaceBook</!-->
+    <meta property="og:url" content="http://ebermudezgit.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mi pagina Personal">
+    <meta property="og:description" content="Ebermudezgit.GitHub.io : Se presenta mi pagina persona. Tenemos la primera fase de lo visto en el Desafio Latam.">
+    <meta property="og:image" content="http://img.xmensajes.com/hola/303.jpg">
+    <meta property="og:site_name" content="Ebermudezgit.GitHub.io">
+
+    <!-->G +</!-->
+    <meta itemprop="name" content="Ebermudezgit.GitHub.io">
+    <meta itemprop="description" content="Ebermudezgit.GitHub.io : Se presenta mi pagina persona. Tenemos la primera fase de lo visto en el Desafio Latam.">
+    <meta itemprop="image" content="http://img.xmensajes.com/hola/303.jpg">
+
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -56,14 +75,14 @@
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contactame..</h3>
 
-<p>Una liga a la documentacion de GitHub<a href="https://help.github.com/pages">Docuemntacion</a></p>
+<p>Liga para contactarme<a href="https://github.com/ebermudezGit/"> Eli Bermudez </a></p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Publicado con <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>Publicado con <a href="https://github.com/">GitHub</a></p>
       </footer>
     </div>
 
